keycloak/templates/keycloak-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: keycloak
spec:
  virtualhost:
    fqdn: pingo.dev.keycloak.127.0.0.1.nip.io
  routes:
    - conditions:
      - prefix: /
      services:
        - name: keycloak
          port: 8080
